# pharmacophore-toolkit

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/source/: README.md  conf.py  index.rst  modules.rst  pharmacophore.rst  requirements.txt
docs/source/img/: README.md
docs/source/info/: citation.md  installation.md
docs/source/tutorials/: activity_cliffs.ipynb  pharmacophore_tutorial.ipynb  similarity_maps.ipynb  tutorials.md
docs/source/tutorials/data/: mescaline.sdf  pharma.pml  psilocin.sdf  serotonin.sdf
pharmacophore/: __init__.py  activitycliffs.py  draw.py  pharmacophore.py  sar.py
tests/: test_installation.py
tutorials/: 01-pharmacophore_tutorial.ipynb  02-similarity_maps.ipynb
