[tool.poetry]
name = "pharmacophore-toolkit"
version = "1.0.0"
description = "A simple pharmacophore modeling toolkit"
authors = ["Tony Eight Lin <tonyelin@tmu.edu.tw>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/tlint101/pharmacophore-toolkit.git"
packages = [{ include = "pharmacophore"}]

[tool.poetry.dependencies]
python = ">=3.9"
rdkit = ">=2023.3.1"
pandas = ">=2.0.0"
numpy = ">=2.0.0"
matplotlib = ">=3.*"
ipython = ">=8.*"
ipywidgets = ">=8.*"
py3Dmol = ">=2.4.2"
CairoSVG = ">=2.7.1"
tqdm = "*"

[tool.poetry.extras]
cairosvg = ["cairosvg"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
