[tool.poetry]
name = "pharmacophore-toolkit"
version = "1.1.0"
description = "A simple pharmacophore modeling toolkit"
authors = ["Tony Eight Lin <tonyelin@tmu.edu.tw>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/tlint101/pharmacophore-toolkit.git"
packages = [{ include = "pharmacophore"}]

[tool.poetry.dependencies]
python = ">=3.11"
rdkit = ">=2023.3.1"
pandas = ">=2.0.0"
numpy = ">=2.0.0"
matplotlib = ">=3.*"
ipython = ">=8.*"
ipywidgets = ">=8.*"
py3Dmol = ">=2.4.2"
CairoSVG = ">=2.7.1"
tqdm = "*"
jupyter = "^1.1.1"
ipykernel = "^7.2.0"

[tool.poetry.extras]
cairosvg = ["cairosvg"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "sphinx (>=7.0.0)",
    "myst-nb (>=1.4.0,<2.0.0)",
    "sphinx-book-theme (>=1.2.0,<2.0.0)",
    "sphinx-design (>=0.7.0,<0.8.0)"
]
